<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_owner_menu"
        android:icon="@drawable/outline_home_white_18dp"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/revenues_owner_menu"
        android:icon="@drawable/outline_account_balance_wallet_white_18dp"
        android:orderInCategory="2"
        android:title="@string/menu_revenue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/deals_owner_menu"
        android:icon="@drawable/outline_local_offer_white_18dp"
        android:orderInCategory="3"
        android:title="@string/menu_deals"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_owner_menu"
        android:icon="@drawable/outline_settings_white_18dp"
        android:orderInCategory="4"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
</menu>