<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OwnerSignInLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.OwnerSignInActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailOwnerSignInInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:helperText="@string/required_help_text"
        app:helperTextTextColor="@color/colorSecondary"
        app:hintTextColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/mail_24"
        app:startIconTint="@color/colorSecondary"
        app:startIconTintMode="src_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailOWnerSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/hind_light"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordOwnerSignInInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:helperText="@string/required_help_text"
        app:helperTextTextColor="@color/colorSecondary"
        app:hintTextColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailOwnerSignInInputLayout"
        app:startIconDrawable="@drawable/lock_24"
        app:startIconTint="@color/colorSecondary"
        app:startIconTintMode="src_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordOwnerSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/hind_light"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/doneOwnerSignInBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/white"
        android:fontFamily="@font/hind_light"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordOwnerSignInInputLayout"
        app:rippleColor="@color/colorSecondary" />
</androidx.constraintlayout.widget.ConstraintLayout>