<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterRestaurantDetails"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/businessAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/hind_bold"
        android:text="@string/business_address_headline"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/restaurantNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/business_name"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:helperText="@string/required_help_text"
        app:helperTextTextColor="@color/colorSecondary"
        app:hintTextColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessAddress"
        app:startIconDrawable="@drawable/store_24"
        app:startIconTint="@color/colorSecondary"
        app:startIconTintMode="src_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/restaurantName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/hind_light"
            android:inputType="textPostalAddress|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/streetInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/street"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:helperText="@string/required_help_text"
        app:helperTextTextColor="@color/colorSecondary"
        app:hintTextColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantNameInputLayout"
        app:startIconDrawable="@drawable/location_on_24"
        app:startIconTint="@color/colorSecondary"
        app:startIconTintMode="src_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ownerStreet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/hind_light"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/city"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:helperText="@string/required_help_text"
        app:helperTextTextColor="@color/colorSecondary"
        app:hintTextColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streetInputLayout"
        app:startIconDrawable="@drawable/location_on_24"
        app:startIconTint="@color/colorSecondary"
        app:startIconTintMode="src_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ownerCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/hind_light"
            android:inputType="textPostalAddress|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/country"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:helperText="@string/required_help_text"
        app:helperTextTextColor="@color/colorSecondary"
        app:hintTextColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityInputLayout"
        app:startIconDrawable="@drawable/location_on_24"
        app:startIconTint="@color/colorSecondary"
        app:startIconTintMode="src_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ownerCountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/hind_light"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueToBankBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/hind_light"
        android:text="@string/continue_to_next"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryInputLayout"
        app:rippleColor="@color/colorSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>